<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocateMyStickers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="s_eT_lms">Locate My Stickers</string>
    <string name="s_eT_login">Login</string>
    <string name="s_eT_password">Password</string>
    <string name="s_tv_logIn">Or login with your favorite service</string>
    <string name="s_btn_auth">Login</string>
    <string name="s_eT_mail">Email</string>

    <string name="your_stickers">Your stickers</string>

    <string name="s_Quest01">Are you sure?</string>

    <string name="s_Msg01">Your are not connected.</string>

    <string name="lms_user_error_name">Error loading name</string>
    <string name="lms_user_error_city">Error loading city</string>
    <string name="lms_user_error_followers">Error loading followers</string>
    <string name="lms_user_error_following">Error loading following</string>
    <string name="lms_user_error_stickers">Error loading stickers</string>
    <string name="lms_user_error_friends">Error loading friends</string>

    <string name="lms_search_everything">Everything</string>
    <string name="lms_search_stickers">Stickers</string>
    <string name="lms_search_people">People</string>


</resources>
