<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF">
    <ProgressBar
    android:id="@+id/progress"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:visibility="gone" />

    <ImageView
        android:id="@+id/imageViewLMSLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/lms" />

    <TextView
        android:id="@+id/textViewLMS"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/imageViewLMSLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/s_eT_lms"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#3e444b"
        android:gravity="center" />

	<EditText
	    android:id="@+id/eT_login"
	    android:layout_width="250dp"
	    android:layout_height="44dp"
	    android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewLMS"
	    android:layout_marginTop="15dp"
		android:background="@drawable/textborder"
	    android:ems="10"
	    android:inputType="textWebEmailAddress"
	    android:hint="@string/s_eT_mail"
	    android:gravity="center" />

	<EditText
	    android:id="@+id/eT_password"
	    android:layout_width="250dp"
	    android:layout_height="44dp"
	    android:layout_alignLeft="@+id/eT_login"
	    android:layout_alignRight="@+id/eT_login"
	    android:layout_below="@+id/eT_login"
	    android:layout_marginTop="14dp"
	    android:background="@drawable/textborder"
	    android:ems="10"
	    android:inputType="textPassword"
	    android:hint="@string/s_eT_password"
	    android:gravity="center" />

	<Button
	    android:id="@+id/btn_auth"
	    android:layout_width="250dp"
	    android:layout_height="47dp"
	    android:layout_alignLeft="@+id/eT_password"
	    android:layout_alignRight="@+id/eT_password"
	    android:layout_below="@+id/eT_password"
	    android:layout_marginTop="15dp"
	    android:text="@string/s_btn_auth"
	    android:textColor="#FFFFFF"
	    android:textSize="20sp"
	    android:textStyle="bold"
	    android:background="@drawable/btn_selector" />

	<TextView
	    android:id="@+id/textViewOrLogin"
	    android:layout_width="450dp"
	    android:layout_height="50dp"
	    android:layout_below="@+id/btn_auth"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="10dp"
	    android:text="@string/s_tv_logIn"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="#A2243C"
	    android:gravity="center" />

    <Button
        android:id="@+id/imageButtonFacebook"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_below="@+id/textViewOrLogin"
        android:layout_alignLeft="@+id/eT_password"
        android:background="@drawable/facebook_icon2x" />

    <Button
        android:id="@+id/imageButtonGooglePlus"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_below="@+id/textViewOrLogin"
        android:layout_centerHorizontal="true"
        android:background="@drawable/google_icon2x" />

    <Button
        android:id="@+id/imageButtonTwitter"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_below="@+id/textViewOrLogin"
        android:layout_alignRight="@+id/eT_password"
        android:background="@drawable/twitter_icon2x" />
    
</RelativeLayout>