<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:singleLine="true"/>

    <com.locatemystickers.utils.SegmentedRadioGroup
        android:id="@+id/segment_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="42dip"
        android:layout_alignParentTop="true"
        android:layout_below="@id/editSearch"
        android:orientation="horizontal"
        android:checkedButton="@+id/btn_everything"
        android:gravity="fill_horizontal"
        android:baselineAligned="true"
        android:layout_marginTop="-50dp">
        <RadioButton android:id="@id/btn_everything"
            android:layout_width="wrap_content"
            android:layout_weight="0.3"
            android:minHeight="35dip"
            android:text="@string/lms_search_everything"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/radio_colors"
            android:layout_height="wrap_content"/>
        <RadioButton android:id="@+id/btn_stickers"
            android:layout_width="wrap_content"
            android:layout_weight="0.3"
            android:minHeight="35dip"
            android:text="@string/lms_search_stickers"
            android:button="@null"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/radio_colors"
            android:layout_height="match_parent"/>
        <RadioButton android:id="@+id/btn_people"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:minHeight="35dip"
            android:text="@string/lms_search_people"
            android:button="@null"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/radio_colors" />
    </com.locatemystickers.utils.SegmentedRadioGroup>

        <com.ged74.swipelistview.SwipeListView
            xmlns:swipe="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lvEsp"
            android:listSelector="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8"
            swipe:swipeFrontView="@+id/front"
            swipe:swipeBackView="@+id/back"
            swipe:swipeActionLeft="reveal"
            swipe:swipeCloseAllItemsWhenMoveList="true"
            swipe:swipeMode="both"
            android:layout_gravity="right|center_vertical" />


</LinearLayout>